fixes url wrapping

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -62,6 +62,6 @@ body { padding-top: 60px; }
 		h4 { margin-bottom: 5px;}
 		//p { float: right; line-height: 38px; margin-bottom: 0; }
 		p { color:#595959 }
-		p a { white-space: pre-wrap;}
+		p a { white-space: pre-wrap; word-wrap: break-word;}
 	}
 }
